--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\rubga\AppData\Local\Temp\testng-eclipse--1306001124\testng-customsuite.xml</span>
+                    <span>C:\Users\rubga\AppData\Local\Temp\testng-eclipse--151561485\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,42 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="RunRegistrarseTest" class="method navigator-link" hash-for-method="runScenario(&quot;Show Women Dress&quot;, &quot;WomenDress&quot;)">runScenario("Show Women Dress", "WomenDress")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCategoriesTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Categories de un grup&quot;, &quot;VisualitzarCategories&quot;)">runScenario("Visualitzar Categories de un grup", "VisualitzarCategories")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="RunRegistrarseTest" class="method navigator-link" hash-for-method="runScenario(&quot;Show Women Dress&quot;, &quot;WomenDress&quot;)">runScenario("Show Women Dress", "WomenDress")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCategoriesTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Categories de un grup&quot;, &quot;VisualitzarCategories&quot;)">runScenario("Visualitzar Categories de un grup", "VisualitzarCategories")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCategoriesTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Categories de un grup&quot;, &quot;VisualitzarCategories&quot;)">runScenario("Visualitzar Categories de un grup", "VisualitzarCategories")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCategoriesTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Categoria sense grup&quot;, &quot;VisualitzarCategories&quot;)">runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCategoriesTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Categoria sense grup&quot;, &quot;VisualitzarCategories&quot;)">runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCategoriesTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Categories de un grup&quot;, &quot;VisualitzarCategories&quot;)">runScenario("Visualitzar Categories de un grup", "VisualitzarCategories")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCategoriesTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Categoria sense grup&quot;, &quot;VisualitzarCategories&quot;)">runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCategoriesTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Categoria sense grup&quot;, &quot;VisualitzarCategories&quot;)">runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,25 +156,85 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">RunRegistrarseTest</span>
+              <span class="class-name">VisualitzarCategoriesTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Show Women Dress&quot;, &quot;WomenDress&quot;)">
-                  </a> <!-- runScenario("Show Women Dress", "WomenDress") -->
+                  <a name="runScenario(&quot;Visualitzar Categories de un grup&quot;, &quot;VisualitzarCategories&quot;)">
+                  </a> <!-- runScenario("Visualitzar Categories de un grup", "VisualitzarCategories") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Show Women Dress","WomenDress")</span>
+                  <span class="parameters">("Visualitzar Categories de un grup","VisualitzarCategories")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Show Women Dress&quot;, &quot;WomenDress&quot;)">
-                  </a> <!-- runScenario("Show Women Dress", "WomenDress") -->
+                  <a name="runScenario(&quot;Visualitzar Categories de un grup&quot;, &quot;VisualitzarCategories&quot;)">
+                  </a> <!-- runScenario("Visualitzar Categories de un grup", "VisualitzarCategories") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Show Women Dress","WomenDress")</span>
+                  <span class="parameters">("Visualitzar Categories de un grup","VisualitzarCategories")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Visualitzar Categories de un grup&quot;, &quot;VisualitzarCategories&quot;)">
+                  </a> <!-- runScenario("Visualitzar Categories de un grup", "VisualitzarCategories") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Visualitzar Categories de un grup","VisualitzarCategories")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Visualitzar Categoria sense grup&quot;, &quot;VisualitzarCategories&quot;)">
+                  </a> <!-- runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Visualitzar Categoria sense grup","VisualitzarCategories")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Visualitzar Categoria sense grup&quot;, &quot;VisualitzarCategories&quot;)">
+                  </a> <!-- runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Visualitzar Categoria sense grup","VisualitzarCategories")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Visualitzar Categories de un grup&quot;, &quot;VisualitzarCategories&quot;)">
+                  </a> <!-- runScenario("Visualitzar Categories de un grup", "VisualitzarCategories") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Visualitzar Categories de un grup","VisualitzarCategories")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Visualitzar Categoria sense grup&quot;, &quot;VisualitzarCategories&quot;)">
+                  </a> <!-- runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Visualitzar Categoria sense grup","VisualitzarCategories")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Visualitzar Categoria sense grup&quot;, &quot;VisualitzarCategories&quot;)">
+                  </a> <!-- runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Visualitzar Categoria sense grup","VisualitzarCategories")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -154,7 +244,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rubga\AppData\Local\Temp\testng-eclipse--1306001124\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rubga\AppData\Local\Temp\testng-eclipse--151561485\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -163,7 +253,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;RunRegistrarseTest&quot;/&gt;
+      &lt;class name=&quot;VisualitzarCategoriesTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -211,20 +301,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'RunRegistrarseTest')
-data.setCell(0, 3, 6190);
+data.setCell(0, 2, 'VisualitzarCategoriesTest')
+data.setCell(0, 3, 3903);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'RunRegistrarseTest')
-data.setCell(1, 3, 5727);
+data.setCell(1, 2, 'VisualitzarCategoriesTest')
+data.setCell(1, 3, 3598);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'runScenario')
+data.setCell(2, 2, 'VisualitzarCategoriesTest')
+data.setCell(2, 3, 3526);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'runScenario')
+data.setCell(3, 2, 'VisualitzarCategoriesTest')
+data.setCell(3, 3, 3506);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'runScenario')
+data.setCell(4, 2, 'VisualitzarCategoriesTest')
+data.setCell(4, 3, 3498);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'runScenario')
+data.setCell(5, 2, 'VisualitzarCategoriesTest')
+data.setCell(5, 3, 3491);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'runScenario')
+data.setCell(6, 2, 'VisualitzarCategoriesTest')
+data.setCell(6, 3, 3465);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'runScenario')
+data.setCell(7, 2, 'VisualitzarCategoriesTest')
+data.setCell(7, 3, 3446);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -250,22 +364,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">RunRegistrarseTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">VisualitzarCategoriesTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@7afbf561)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@2f84acf7)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Show Women Dress", "WomenDress")</span>
-                <span class="method-start">167 ms</span>
+                <span class="method-name">runScenario("Visualitzar Categories de un grup", "VisualitzarCategories")</span>
+                <span class="method-start">174 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">runScenario("Show Women Dress", "WomenDress")</span>
-                <span class="method-start">6360 ms</span>
+                <span class="method-name">runScenario("Visualitzar Categories de un grup", "VisualitzarCategories")</span>
+                <span class="method-start">4081 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Visualitzar Categories de un grup", "VisualitzarCategories")</span>
+                <span class="method-start">7547 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Visualitzar Categories de un grup", "VisualitzarCategories")</span>
+                <span class="method-start">11075 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories")</span>
+                <span class="method-start">14582 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories")</span>
+                <span class="method-start">18181 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories")</span>
+                <span class="method-start">21629 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Visualitzar Categoria sense grup", "VisualitzarCategories")</span>
+                <span class="method-start">25121 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">12089 ms</span>
+                <span class="method-start">28622 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
