--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\rubga\AppData\Local\Temp\testng-eclipse--1178293918\testng-customsuite.xml</span>
+                    <span>C:\Users\rubga\AppData\Local\Temp\testng-eclipse-196227926\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,27 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="RegisterTest" class="method navigator-link" hash-for-method="runScenario(&quot;Registrarse&quot;, &quot;Register&quot;)">runScenario("Registrarse", "Register")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="IniciarSessioTest" class="method navigator-link" hash-for-method="runScenario(&quot;Iniciar Sessio&quot;, &quot;IniciarSessio&quot;)">runScenario("Iniciar Sessio", "IniciarSessio")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="RegisterTest" class="method navigator-link" hash-for-method="runScenario(&quot;No acceptar politiques de privacitat&quot;, &quot;Register&quot;)">runScenario("No acceptar politiques de privacitat", "Register")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="IniciarSessioTest" class="method navigator-link" hash-for-method="runScenario(&quot;Correu invalid&quot;, &quot;IniciarSessio&quot;)">runScenario("Correu invalid", "IniciarSessio")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="RegisterTest" class="method navigator-link" hash-for-method="runScenario(&quot;Registrarse&quot;, &quot;Register&quot;)">runScenario("Registrarse", "Register")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="RegisterTest" class="method navigator-link" hash-for-method="runScenario(&quot;Deixar buits&quot;, &quot;Register&quot;)">runScenario("Deixar buits", "Register")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="RegisterTest" class="method navigator-link" hash-for-method="runScenario(&quot;Contrasenyes no coincideixen&quot;, &quot;Register&quot;)">runScenario("Contrasenyes no coincideixen", "Register")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="IniciarSessioTest" class="method navigator-link" hash-for-method="runScenario(&quot;Contrasenya invalida&quot;, &quot;IniciarSessio&quot;)">runScenario("Contrasenya invalida", "IniciarSessio")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,55 +131,35 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">RegisterTest</span>
+              <span class="class-name">IniciarSessioTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Registrarse&quot;, &quot;Register&quot;)">
-                  </a> <!-- runScenario("Registrarse", "Register") -->
+                  <a name="runScenario(&quot;Iniciar Sessio&quot;, &quot;IniciarSessio&quot;)">
+                  </a> <!-- runScenario("Iniciar Sessio", "IniciarSessio") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Registrarse","Register")</span>
+                  <span class="parameters">("Iniciar Sessio","IniciarSessio")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;No acceptar politiques de privacitat&quot;, &quot;Register&quot;)">
-                  </a> <!-- runScenario("No acceptar politiques de privacitat", "Register") -->
+                  <a name="runScenario(&quot;Correu invalid&quot;, &quot;IniciarSessio&quot;)">
+                  </a> <!-- runScenario("Correu invalid", "IniciarSessio") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("No acceptar politiques de privacitat","Register")</span>
+                  <span class="parameters">("Correu invalid","IniciarSessio")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Registrarse&quot;, &quot;Register&quot;)">
-                  </a> <!-- runScenario("Registrarse", "Register") -->
+                  <a name="runScenario(&quot;Contrasenya invalida&quot;, &quot;IniciarSessio&quot;)">
+                  </a> <!-- runScenario("Contrasenya invalida", "IniciarSessio") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Registrarse","Register")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Deixar buits&quot;, &quot;Register&quot;)">
-                  </a> <!-- runScenario("Deixar buits", "Register") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Deixar buits","Register")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Contrasenyes no coincideixen&quot;, &quot;Register&quot;)">
-                  </a> <!-- runScenario("Contrasenyes no coincideixen", "Register") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Contrasenyes no coincideixen","Register")</span>
+                  <span class="parameters">("Contrasenya invalida","IniciarSessio")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -199,7 +169,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rubga\AppData\Local\Temp\testng-eclipse--1178293918\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rubga\AppData\Local\Temp\testng-eclipse-196227926\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,7 +178,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;RegisterTest&quot;/&gt;
+      &lt;class name=&quot;IniciarSessioTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -256,32 +226,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'RegisterTest')
-data.setCell(0, 3, 6254);
+data.setCell(0, 2, 'IniciarSessioTest')
+data.setCell(0, 3, 4716);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'RegisterTest')
-data.setCell(1, 3, 4931);
+data.setCell(1, 2, 'IniciarSessioTest')
+data.setCell(1, 3, 3996);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
-data.setCell(2, 2, 'RegisterTest')
-data.setCell(2, 3, 4909);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'runScenario')
-data.setCell(3, 2, 'RegisterTest')
-data.setCell(3, 3, 4817);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'runScenario')
-data.setCell(4, 2, 'RegisterTest')
-data.setCell(4, 3, 4470);
+data.setCell(2, 2, 'IniciarSessioTest')
+data.setCell(2, 3, 3846);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 25 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -307,34 +269,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">RegisterTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">IniciarSessioTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@20f6f88c)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@84487f4)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Registrarse", "Register")</span>
-                <span class="method-start">187 ms</span>
+                <span class="method-name">runScenario("Iniciar Sessio", "IniciarSessio")</span>
+                <span class="method-start">183 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">runScenario("Registrarse", "Register")</span>
-                <span class="method-start">6444 ms</span>
+                <span class="method-name">runScenario("Correu invalid", "IniciarSessio")</span>
+                <span class="method-start">4902 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">runScenario("Deixar buits", "Register")</span>
-                <span class="method-start">11353 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Contrasenyes no coincideixen", "Register")</span>
-                <span class="method-start">15824 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("No acceptar politiques de privacitat", "Register")</span>
-                <span class="method-start">20642 ms</span>
+                <span class="method-name">runScenario("Contrasenya invalida", "IniciarSessio")</span>
+                <span class="method-start">8749 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">25575 ms</span>
+                <span class="method-start">12748 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
