--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\rubga\AppData\Local\Temp\testng-eclipse--228588353\testng-customsuite.xml</span>
+                    <span>C:\Users\rubga\AppData\Local\Temp\testng-eclipse--117041297\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="VeureWishlistTest" class="method navigator-link" hash-for-method="runScenario(&quot;Veure Wishlist&quot;, &quot;VeureWishlist&quot;)">runScenario("Veure Wishlist", "VeureWishlist")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="EliminarWishlistTest" class="method navigator-link" hash-for-method="runScenario(&quot;Eliminar element Wishlist&quot;, &quot;EliminarWishlist&quot;)">runScenario("Eliminar element Wishlist", "EliminarWishlist")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,15 +121,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">VeureWishlistTest</span>
+              <span class="class-name">EliminarWishlistTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Veure Wishlist&quot;, &quot;VeureWishlist&quot;)">
-                  </a> <!-- runScenario("Veure Wishlist", "VeureWishlist") -->
+                  <a name="runScenario(&quot;Eliminar element Wishlist&quot;, &quot;EliminarWishlist&quot;)">
+                  </a> <!-- runScenario("Eliminar element Wishlist", "EliminarWishlist") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Veure Wishlist","VeureWishlist")</span>
+                  <span class="parameters">("Eliminar element Wishlist","EliminarWishlist")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -139,7 +139,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rubga\AppData\Local\Temp\testng-eclipse--228588353\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rubga\AppData\Local\Temp\testng-eclipse--117041297\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +148,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;VeureWishlistTest&quot;/&gt;
+      &lt;class name=&quot;EliminarWishlistTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -199,13 +199,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'VeureWishlistTest')
-data.setCell(0, 3, 5401);
+data.setCell(0, 2, 'EliminarWishlistTest')
+data.setCell(0, 3, 6118);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -231,18 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">VeureWishlistTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">EliminarWishlistTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@4d96250)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@4315e9af)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Veure Wishlist", "VeureWishlist")</span>
-                <span class="method-start">167 ms</span>
+                <span class="method-name">runScenario("Eliminar element Wishlist", "EliminarWishlist")</span>
+                <span class="method-start">163 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">5572 ms</span>
+                <span class="method-start">6285 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
